minor changes in appendiceA
Signed-off-by: Diego Rondelli <diego.rondelli@mail.polimi.it>

--- a/latex_source/appendiceA.tex
+++ b/latex_source/appendiceA.tex
@@ -137,6 +137,7 @@ In questa sezione sarà mostrata la corretta procedura per utilizzare il driver 
 Il progetto del software LabVIEW, che farà uso del driver SCO Board, dovrà contenere tutti i VI presenti nell'archivio \textit{.zip} fornito. La struttura delle cartelle contenute nell'archivio non deve essere alterata.
 
 Il progetto avrà la struttura mostrata in Figura \ref{progetto}.
+Il diagramma a blocchi (\textit{Block Diagram}) di un VI che fa uso dei driver SCO Board è mostrato in Figura \ref{VI}
 
 \begin{figure}[H]
 	\begin{center}
@@ -145,8 +146,6 @@ Il progetto avrà la struttura mostrata in Figura \ref{progetto}.
 		\label{progetto}
 	\end{center}
 \end{figure}
-
-Invece, il diagramma a blocchi (\textit{Block Diagram}) di un VI che fa uso dei driver SCO Board è mostrato in Figura \ref{VI}
 
 \begin{figure}[H]
 	\begin{center}
