fixed image allestimento misure
Signed-off-by: Diego Rondelli <diego.rondelli@mail.polimi.it>

--- a/latex_source/capitolo5.tex
+++ b/latex_source/capitolo5.tex
@@ -17,7 +17,7 @@ Per tutte le prove il fuoco del laser è stato mantenuto oltre la massima distan
 
 Di seguito sono descritte più nel dettaglio le metodologie di prove effettuate. Per confrontare i miglioramenti tra diverse implementazioni si è scelto di valutare la deviazione standard  (o incertezza) relativa della misura.
 
-\begin{figure}
+\begin{figure}[H]
   \begin{center}
     \includegraphics[scale=0.1]{cap5/allestimento}
     \caption{Allestimento della misura}
