--- a/latex_source/ringraziamenti.tex
+++ b/latex_source/ringraziamenti.tex
@@ -1,3 +1,30 @@
 \chapter*{Ringraziamenti}
+\label{ringraziamenti}
+\thispagestyle{empty}
+\addcontentsline{toc}{chapter}{Ringraziamenti}
 
-%%TODO Ringraziamenti
+\section*{Ringraziamenti congiunti}
+La riuscita di questo lavoro di tesi non è soltanto merito dei due autori, ma è il risultato della collaborazione e dell'impegno di molte persone.
+
+Innanzitutto vorremmo ringraziare il nostro relatore, il professore \textit{Michele Norgia}, per aver sempre mostrato disponibilità, prontezza e gentilezza nel rispondere alle nostre domande ed ai nostri dubbi, anche ai più banali, e per aver contribuito a colmare le nostre lacune in un ambito abbastanza insolito per un ingegnere informatico.
+
+Vorremmo poi ringraziare l'ormai Ingegnere \textit{Samuele Disegna} per aver contribuito alla realizzazione fisica dello strumento e per aver dedicato il suo tempo libero dopo la laurea alla risoluzione dei problemi che si sono presentati durante la fase di test dello strumento.
+
+Infine vorremmo ringraziare tutti i membri ed i tesisti del \textit{laboratorio di misure ottiche ed elettroniche}, per averci aiutato nei frequenti momenti in cui le idee scarseggiavano. In particolare vorremmo ringraziare \textit{Giacomo} per averci guidato nell'ottimizzazione dello strumento, \textit{Federico}, per averci sopportato durante questi mesi di lavoro, il professor \textit{Alessandro Pesatori}, per averci fatto conoscere il mondo delle misue elettroniche.
+
+\section*{Ringraziamenti individuali}
+\subsection*{Diego ringrazia...}
+
+Personalmente per prima cosa ritengo doveroso ringraziare la mia famiglia, a cui è dedicato questo lavoro, per avermi sempre sostenuto e supportato nei momenti difficili e per aver sempre creduto in me, anche nei momenti in cui non pensavo di riuscire a farcela.
+
+Ringrazio i miei amici, \textit{Allo, Claudia, Manny} e \textit{Vale}, per aver sopportato in questi anni le mie battute senza senso e per avermi aiutato a distrarmi dallo studio e dai problemi con la loro compagnia.
+
+Ringrazio \textit{Leonardo}, per la collaborazione mostrata nello sviluppo di questo lavoro e per l'impegno mostrato durante questi mesi.
+
+Infine ringrazio i compagni di corso per aver contribuito ai miei risultati nei momenti di studio, ma soprattutto per aver reso meno pesante il tempo trascorso in università nei momenti di pausa.
+
+\subsection*{Leonardo ringrazia...}
+ToDo RINGRAZIEMENTI LEO
+\subsection*{}
+Senza l'aiuto, volontario o non, di queste persone non saremmo riusciti a raggiungere questo importante traguardo.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%FINE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
