Ringraziamenti: minor fixing

--- a/latex_source/ringraziamenti.tex
+++ b/latex_source/ringraziamenti.tex
@@ -10,7 +10,7 @@ Innanzitutto vorremmo ringraziare il nostro relatore, il professore \textit{Mich
 
 Vorremmo poi ringraziare l'ormai Ingegnere \textit{Samuele Disegna} per aver contribuito alla realizzazione fisica dello strumento e per aver dedicato il suo tempo libero dopo la laurea alla risoluzione dei problemi che si sono presentati durante la fase di test dello strumento.
 
-Infine vorremmo ringraziare tutti i membri ed i tesisti del \textit{laboratorio di misure ottiche ed elettroniche}, per averci aiutato nei frequenti momenti in cui le idee scarseggiavano. In particolare vorremmo ringraziare \textit{Giacomo} per averci guidato nell'ottimizzazione dello strumento, \textit{Federico}, per averci sopportato durante questi mesi di lavoro, il professor \textit{Alessandro Pesatori}, per averci fatto conoscere il mondo delle misue elettroniche.
+Infine vorremmo ringraziare tutti i membri ed i tesisti del \textit{laboratorio di misure ottiche ed elettroniche}, per la disponibilità e la simpatia, che hanno contribuito a creare un ambiente di lavoro allegro ed amichevole. In particolare vorremmo ringraziare \textit{Giacomo}, che con la sua esperienza ci ha aiutato nell'ottimizzazione dello strumento, \textit{Federico}, per averci sempre spronato a fare di meglio ed il professor \textit{Alessandro Pesatori}, per averci fatto conoscere il mondo delle misue elettroniche.
 
 \section*{Ringraziamenti individuali}
 \subsection*{Diego ringrazia...}
