--- a/latex_source/ringraziamenti.tex
+++ b/latex_source/ringraziamenti.tex
@@ -6,11 +6,11 @@
 \section*{Ringraziamenti congiunti}
 La riuscita di questo lavoro di tesi non è soltanto merito dei due autori, ma è il risultato della collaborazione e dell'impegno di molte persone.
 
-Innanzitutto vorremmo ringraziare il nostro relatore, il professore \textit{Michele Norgia}, per aver sempre mostrato disponibilità, prontezza e gentilezza nel rispondere alle nostre domande ed ai nostri dubbi, anche ai più banali, e per aver contribuito a colmare le nostre lacune in un ambito abbastanza insolito per un ingegnere informatico.
+Innanzitutto vorremmo ringraziare il nostro relatore, il professor \textit{Michele Norgia}, per aver sempre mostrato disponibilità, prontezza e gentilezza nel rispondere alle nostre domande ed ai nostri dubbi, anche ai più banali, e per aver contribuito a colmare le nostre lacune in un ambito abbastanza insolito per un ingegnere informatico.
 
-Vorremmo poi ringraziare l'ormai Ingegnere \textit{Samuele Disegna} per aver contribuito alla realizzazione fisica dello strumento e per aver dedicato il suo tempo libero dopo la laurea alla risoluzione dei problemi che si sono presentati durante la fase di test dello strumento.
+Vorremmo inoltre ringraziare l'ormai Ingegner \textit{Samuele Disegna} per aver contribuito alla realizzazione fisica dello strumento descritto in questo lavoro e per aver dedicato il suo tempo libero, dopo la laurea, alla risoluzione dei problemi che si sono presentati durante la fase di test dello strumento.
 
-Infine vorremmo ringraziare tutti i membri ed i tesisti del \textit{laboratorio di misure ottiche ed elettroniche}, per la disponibilità e la simpatia, che hanno contribuito a creare un ambiente di lavoro allegro ed amichevole. In particolare vorremmo ringraziare \textit{Giacomo}, che con la sua esperienza ci ha aiutato nell'ottimizzazione dello strumento, \textit{Federico}, per averci sempre spronato a fare di meglio ed il professor \textit{Alessandro Pesatori}, per averci fatto conoscere il mondo delle misue elettroniche.
+Infine vorremmo ringraziare tutti i membri ed i tesisti del \textit{Laboratorio di Misure ottiche ed elettroniche (MOLES)}, per la disponibilità e la simpatia, che hanno contribuito a creare un ambiente di lavoro allegro ed amichevole. In particolare vorremmo ringraziare \textit{Giacomo}, che con la sua esperienza ci ha aiutato nell'ottimizzazione dello strumento, \textit{Federico}, per averci sempre spronato a fare di meglio ed il professor \textit{Alessandro Pesatori}, per averci fatto conoscere il mondo delle misure elettroniche.
 
 \section*{Ringraziamenti individuali}
 \subsection*{Diego ringrazia...}
@@ -24,7 +24,15 @@ Ringrazio \textit{Leonardo}, per la collaborazione mostrata nello sviluppo di qu
 Infine ringrazio i compagni di corso per aver contribuito ai miei risultati nei momenti di studio, ma soprattutto per aver reso meno pesante il tempo trascorso in università nei momenti di pausa.
 
 \subsection*{Leonardo ringrazia...}
-ToDo RINGRAZIEMENTI LEO
+
+%% TODO Da sistemare Ringraziamenti Leo
+Il ringraziamento più grande va alla mia \textit{famiglia} per il sostegno e la stima mostratomi in questi anni. \'E a loro che dedico questo lavoro di Tesi.
+
+Ringrazio la mia fidanzata \textit{Sabrina}, per aver sempre creduto nelle mie potenzialità e per aver gioito con me dei miei successi e avermi consolato dopo le piccole sconfitte. 
+
+Ringrazio il mio compagno di Tesi \textit{Diego}, per la collaborazione e per avermi sopportato e spronato nei momenti di sconforto durante lo svolgimento di questo lavoro.
+
+Infine, ringrazio tutti gli \textit{amici} e i \textit{compagni di corso} per aver reso meno pesanti gli anni trascorsi in Università e per avermi aiutato a distrarmi dallo studio nei momenti di svago.
+
 \subsection*{}
 Senza l'aiuto, volontario o non, di queste persone non saremmo riusciti a raggiungere questo importante traguardo.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%FINE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
