--- a/latex_source/ringraziamenti.tex
+++ b/latex_source/ringraziamenti.tex
@@ -4,11 +4,11 @@
 \addcontentsline{toc}{chapter}{Ringraziamenti}
 
 \section*{Ringraziamenti congiunti}
-La riuscita di questo lavoro di tesi non è soltanto merito dei due autori, ma è il risultato della collaborazione e dell'impegno di molte persone.
+La riuscita di questo lavoro di tesi non è soltanto merito nostro, ma è il risultato della collaborazione e dell'impegno di molte persone.
 
 Innanzitutto vorremmo ringraziare il nostro relatore, il professor \textit{Michele Norgia}, per aver sempre mostrato disponibilità, prontezza e gentilezza nel rispondere alle nostre domande ed ai nostri dubbi, anche ai più banali, e per aver contribuito a colmare le nostre lacune in un ambito abbastanza insolito per un ingegnere informatico.
 
-Vorremmo inoltre ringraziare l'ormai Ingegner \textit{Samuele Disegna} per aver contribuito alla realizzazione fisica dello strumento descritto in questo lavoro e per aver dedicato il suo tempo libero, dopo la laurea, alla risoluzione dei problemi che si sono presentati durante la fase di test dello strumento.
+Vorremmo inoltre ringraziare l'ormai Ingegnere \textit{Samuele Disegna} per aver contribuito alla realizzazione fisica dello strumento descritto in questo lavoro e per aver dedicato il suo tempo libero, dopo la laurea, alla risoluzione dei problemi che si sono presentati durante la fase di test dello strumento.
 
 Infine vorremmo ringraziare tutti i membri ed i tesisti del \textit{Laboratorio di Misure ottiche ed elettroniche (MOLES)}, per la disponibilità e la simpatia, che hanno contribuito a creare un ambiente di lavoro allegro ed amichevole. In particolare vorremmo ringraziare \textit{Giacomo}, che con la sua esperienza ci ha aiutato nell'ottimizzazione dello strumento, \textit{Federico}, per averci sempre spronato a fare di meglio ed il professor \textit{Alessandro Pesatori}, per averci fatto conoscere il mondo delle misure elettroniche.
 
