--- a/latex_source/ringraziamenti.tex
+++ b/latex_source/ringraziamenti.tex
@@ -25,14 +25,13 @@ Infine ringrazio i compagni di corso per aver contribuito ai miei risultati nei 
 
 \subsection*{Leonardo ringrazia...}
 
-%% TODO Da sistemare Ringraziamenti Leo
 Il ringraziamento più grande va alla mia \textit{famiglia} per il sostegno e la stima mostratomi in questi anni. \'E a loro che dedico questo lavoro di Tesi.
 
 Ringrazio la mia fidanzata \textit{Sabrina}, per aver sempre creduto nelle mie potenzialità e per aver gioito con me dei miei successi e avermi consolato dopo le piccole sconfitte. 
 
 Ringrazio il mio compagno di Tesi \textit{Diego}, per la collaborazione e per avermi sopportato e spronato nei momenti di sconforto durante lo svolgimento di questo lavoro.
 
-Infine, ringrazio tutti gli \textit{amici} e i \textit{compagni di corso} per aver reso meno pesanti gli anni trascorsi in Università e per avermi aiutato a distrarmi dallo studio nei momenti di svago.
+Infine, ringrazio gli \textit{amici} e i \textit{compagni di corso} per aver reso meno pesanti gli anni trascorsi in Università e per avermi aiutato a distrarmi dallo studio nei momenti di svago.
 
 \subsection*{}
 Senza l'aiuto, volontario o non, di queste persone non saremmo riusciti a raggiungere questo importante traguardo.
