--- a/latex_source/ringraziamenti.tex
+++ b/latex_source/ringraziamenti.tex
@@ -25,7 +25,7 @@ Infine ringrazio i compagni di corso per aver contribuito ai miei risultati nei 
 
 \subsection*{Leonardo ringrazia...}
 
-Il ringraziamento più grande va alla mia \textit{famiglia} per il sostegno e la stima mostratomi in questi anni. \'E a loro che dedico questo lavoro di Tesi.
+Il ringraziamento più grande va alla mia \textit{famiglia} per il sostegno e la stima dimostratomi in questi anni. \'E a loro che dedico questo lavoro di Tesi.
 
 Ringrazio la mia fidanzata \textit{Sabrina}, per aver sempre creduto nelle mie potenzialità e per aver gioito con me dei miei successi e avermi consolato dopo le piccole sconfitte. 
 
